erreur/erreur.txt
mainpr.c:2:5: error: unknown type name ‘Game’
    2 |     Game game;
      |     ^~~~
mainpr.c:3:5: error: unknown type name ‘SDL_Window’
    3 |     SDL_Window *window = NULL;
      |     ^~~~~~~~~~
mainpr.c:3:26: error: ‘NULL’ undeclared (first use in this function)
    3 |     SDL_Window *window = NULL;
      |                          ^~~~
mainpr.c:1:1: note: ‘NULL’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
  +++ |+#include <stddef.h>
    1 | int main() {
mainpr.c:3:26: note: each undeclared identifier is reported only once for each function it appears in
    3 |     SDL_Window *window = NULL;
      |                          ^~~~
mainpr.c:4:5: error: unknown type name ‘SDL_Renderer’
    4 |     SDL_Renderer *renderer = NULL;
      |     ^~~~~~~~~~~~
mainpr.c:6:5: warning: implicit declaration of function ‘Initialisation’ [-Wimplicit-function-declaration]
    6 |     Initialisation(&game, &window, &renderer);
      |     ^~~~~~~~~~~~~~
mainpr.c:7:9: error: request for member ‘currentState’ in something not a structure or union
    7 |     game.currentState = STATE_MENU; // On commence par le menu
      |         ^
mainpr.c:7:25: error: ‘STATE_MENU’ undeclared (first use in this function)
    7 |     game.currentState = STATE_MENU; // On commence par le menu
      |                         ^~~~~~~~~~
mainpr.c:9:16: error: request for member ‘running’ in something not a structure or union
    9 |     while (game.running) {
      |                ^
mainpr.c:10:9: warning: implicit declaration of function ‘SDL_RenderClear’ [-Wimplicit-function-declaration]
   10 |         SDL_RenderClear(renderer);
      |         ^~~~~~~~~~~~~~~
mainpr.c:12:17: error: request for member ‘currentState’ in something not a structure or union
   12 |         if (game.currentState == STATE_MENU) {
      |                 ^
mainpr.c:13:13: warning: implicit declaration of function ‘Menu_LectureEntree’ [-Wimplicit-function-declaration]
   13 |             Menu_LectureEntree(&game);
      |             ^~~~~~~~~~~~~~~~~~
mainpr.c:14:13: warning: implicit declaration of function ‘Menu_Affichage’ [-Wimplicit-function-declaration]
   14 |             Menu_Affichage(&game, renderer);
      |             ^~~~~~~~~~~~~~
mainpr.c:16:22: error: request for member ‘currentState’ in something not a structure or union
   16 |         else if (game.currentState == STATE_GAME) {
      |                      ^
mainpr.c:16:39: error: ‘STATE_GAME’ undeclared (first use in this function)
   16 |         else if (game.currentState == STATE_GAME) {
      |                                       ^~~~~~~~~~
mainpr.c:22:9: warning: implicit declaration of function ‘SDL_RenderPresent’ [-Wimplicit-function-declaration]
   22 |         SDL_RenderPresent(renderer);
      |         ^~~~~~~~~~~~~~~~~
mainpr.c:25:5: warning: implicit declaration of function ‘Liberation’ [-Wimplicit-function-declaration]
   25 |     Liberation(&game, window, renderer);
      |     ^~~~~~~~~~
make: *** [Makefile:47: mainpr.o] Error 1

